# LangChain-Platform-Demo

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  test_setup.py
config/: __init__.py  environments.py  settings.py
examples/: agent_workflow.py  basic_usage.py  rag_example.py
src/: __init__.py
src/chains/: basic_chain.py  rag_chain.py
src/graphs/: agent_graph.py  workflow_graph.py
src/langsmith/: setup.py
src/tools/: calculator.py  web_search.py
tests/: __init__.py  test_config.py  test_langsmith.py  test_tools.py
