[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-platform-demo"
version = "0.1.0"
description = "Comprehensive LangChain, LangGraph, and LangSmith integration demo"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Karthik Ravi"}]
requires-python = ">=3.11"
keywords = ["langchain", "langgraph", "langsmith", "ai", "llm", "demo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.5.0",
    "langsmith>=0.4.0",
    "faiss-cpu>=1.7.4",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "langchainhub>=0.1.0",
    "pypdf>=3.15.0",
    "python-docx>=0.8.11",
    "google-search-results>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "black",
    "pytest>=7.4.0",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/karthik-ravi-1537/LangChain-Platform-Demo"
Repository = "https://github.com/karthik-ravi-1537/LangChain-Platform-Demo.git"
Issues = "https://github.com/karthik-ravi-1537/LangChain-Platform-Demo/issues"

[tool.black]
line-length = 120
skip-string-normalization = false
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes errors
    "I",    # import sorting
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in argument defaults
]

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
